Implementada a Funcionalidade de Responder Avaliacao e outras

--- a/classroom/templates/classroom/students/.concluir_tarefa.html
+++ b/classroom/templates/classroom/students/.concluir_tarefa.html
@@ -14,7 +14,7 @@
       <h1 >Detalhes da Tarefa: {{list.item}}</h1><br>
     </div>
     <div class="col-sm-8">
-    <div class="shadow p-3 mb-5 bg-white rounded" class="card">
+    <div class="shadow p-3 mb-5 bg-white rounded" "card">
       <div class="card-body">
 
           
