--- a/classroom/templates/classroom/students/.desafios.html
+++ b/classroom/templates/classroom/students/.desafios.html
@@ -14,13 +14,13 @@
       <div class="col-sm-8">
         <h1 >Lista de Desafios</h1><br>
         <div class="d-flex flex-row-reverse">
-            <a href="{% url 'students:profile'%}" class="btn btn-primary"><i class="fas fa-arrow-left"></i>
+            <a href="{% url 'classroom:profile'%}" class="btn btn-primary"><i class="fas fa-arrow-left"></i>
               Voltar</a>
           </div>
           <br>
       </div>
       
-      <div class="shadow p-3 mb-5 bg-white rounded" class="card">
+      <div class="shadow p-3 mb-5 bg-white rounded" "card">
           <div class="card-body">
 
           
