--- a/classroom/templates/classroom/students/.interests_form.html
+++ b/classroom/templates/classroom/students/.interests_form.html
@@ -17,7 +17,7 @@
     
     <div class="col-sm-6">
       <br>
-      <div class="shadow p-3 mb-5 bg-white rounded" class="card">   
+      <div class="shadow p-3 mb-5 bg-white rounded" "card">   
         <div class="card-body">
         
           <form method="post" novalidate>
@@ -27,7 +27,7 @@
         </div>
       </div>
             <button type="submit" class="btn btn-primary">Salvar Alterações</button>
-            <a style="margin-left: 26px;" href="{% url 'students:quiz_list' %}" class="btn btn-danger">Cancelar</a>
+            <a style="margin-left: 26px;" href="{% url 'classroom:quiz_list' %}" class="btn btn-danger">Cancelar</a>
           </form> 
 
         
