--- a/classroom/templates/classroom/students/.return_profile.html
+++ b/classroom/templates/classroom/students/.return_profile.html
@@ -14,7 +14,7 @@
       <div class="col-sm-7">
         <h1 >Perfil <i class="fas fa-user"></i></h1>
         <div class="d-flex flex-row-reverse">
-            <a href=" {% url 'students:ranking' %}" class="btn btn-sm btn-primary"><i class="fas fa-arrow-left"></i>
+            <a href=" {% url 'classroom:ranking' %}" class="btn btn-sm btn-primary"><i class="fas fa-arrow-left"></i>
               Voltar</a>
           </div>
         <br>
@@ -80,7 +80,7 @@
           <h4 >Insígnias</h4>
                 
                 
-                <div class="shadow p-3 mb-5 bg-white rounded" class="card">
+                <div class="shadow p-3 mb-5 bg-white rounded" "card">
                 
                 <div class="card-body">
                 
