--- a/classroom/templates/classroom/students/add_tarefa.html
+++ b/classroom/templates/classroom/students/add_tarefa.html
@@ -2,10 +2,7 @@
 
 {% load crispy_forms_tags %}
 {% load static %}
-{% block scripts_head %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/newbase.css' %}">
 
-{% endblock scripts_head %}
 {% block content %}
 
 <br>
@@ -19,7 +16,7 @@
     </div>
     
     <div class="col-sm-6">
-      <div class="shadow p-3 mb-5 bg-white rounded" class="card">
+      <div class="shadow p-3 mb-5 bg-white rounded" "card">
         <div class="card-body">
 
             
