--- a/classroom/templates/classroom/students/.ranking.html
+++ b/classroom/templates/classroom/students/.ranking.html
@@ -10,7 +10,7 @@
 <div class="col-md-12 mt-4">
     <div class="row justify-content-md">
         <div class="col-sm-6">
-        <div class="shadow p-3 mb-5 bg-white rounded" class="card">
+        <div class="shadow p-3 mb-5 bg-white rounded" "card">
             <div class="card-body">
                 <h1 class="h3 mb-0 text-gray-800">Ranking de Pontuação:</h1><br>
                 <div class="table-responsive">
@@ -32,7 +32,7 @@
                                    
                                 <tr >
                                     <td>{{ forloop.counter }}</td>
-                                    <td><a href="{% url 'students:return_profile' quiz_profile.pk %}">{{ quiz_profile.username }}</a></td>                
+                                    <td><a href="{% url 'classroom:return_profile' quiz_profile.pk %}">{{ quiz_profile.username }}</a></td>                
                                     <td>{{ quiz_profile.points }}</td>
 
                                     
@@ -77,7 +77,7 @@
 
 
         <div class="col-sm-6">
-            <div class="shadow p-3 mb-5 bg-white rounded" class="card">
+            <div class="shadow p-3 mb-5 bg-white rounded" "card">
                 <div class="card-body">
             <h1 class="h3 mb-0 text-gray-800">Ranking de Desafios Concluídos:</h1><br>
             <div class="table-responsive">
@@ -100,7 +100,7 @@
 
                             <td>{{ forloop.counter }}</td>
                             
-                            <td><a href="{% url 'students:return_profile' top_desafio.pk %}">{{ top_desafio.username }}</a></td>
+                            <td><a href="{% url 'classroom:return_profile' top_desafio.pk %}">{{ top_desafio.username }}</a></td>
                             <td>{{ top_desafio.total_desafio_concluidos }}</td>
                             <td>
                             
