--- a/classroom/templates/classroom/students/take_quiz_form.html
+++ b/classroom/templates/classroom/students/take_quiz_form.html
@@ -1,11 +1,8 @@
-{% extends 'newbase.html' %}
+{% extends "global/base_dashboard.html" %}
 
 {% load crispy_forms_tags %}
 {% load static %}
-{% block scripts_head %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/newbase.css' %}">
 
-{% endblock scripts_head %}
 {% block content %}
 <br>
 
