--- a/classroom/templates/classroom/teachers/quiz_change_list.html
+++ b/classroom/templates/classroom/teachers/quiz_change_list.html
@@ -13,69 +13,53 @@
 
 <div class="container">
 
-<section class="showcase">
-  <div class="container-fluid p-0">
-    <div class="row-responsive">
-      <div class="d-flex flex-row-reverse">
-           <a href="{% url 'classroom:quiz_add' %}" class="btn btn-primary mb-3" role="button"><i class="fas fa-edit"></i> Criar Avaliação</a> 
+  <section class="showcase">
+    <div class="container-fluid p-0">
+      <div class="row-responsive">
+        <div class="d-flex flex-row-reverse">
+          <a href="{% url 'classroom:quiz_add' %}" class="btn btn-primary mb-3" role="button"><i class="fas fa-edit"></i> Criar Avaliação</a> 
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<div class="shadow p-3 mb-5 bg-white rounded">
-  <div class="table-responsive">
+  <div class="shadow p-3 mb-5 bg-white rounded">
+    <div class="table-responsive">
 
-    <table class="table v-middle">
-<br>
-        <thead>
-            <tr class="">
-              <th>Avaliação <i class="fas fa-sticky-note"></i> </th>
-              <th>Período <i class="fas fa-paste"></i></th>
-              <th>Questões <i class="fas fa-align-justify"></i></th>
-              <th>Responderam <i class="fas fa-pencil-alt"></i></th>
-              <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            
-
-             {% for quiz in quizzes %}
+      <table class="table v-middle">
+  <br>
+          <thead>
               <tr>
-                <td class="align-middle"><a href="{% url 'classroom:quiz_change' quiz.pk %}">{{ quiz.name }}</a></td>
-                <td class="align-middle">{{ quiz.subject.get_html_badge }}</td>
-                <td class="align-middle">{{ quiz.questions_count }}</td>
-                <td class="align-middle">{{ quiz.taken_count }}</td>
-                <td class="text-right">
-                  {% comment %} <a href="{% url 'teachers:quiz_results' quiz.pk %}" class="btn btn-primary">Ver resultados <i class="fas fa-eye"></i></a> {% endcomment %}
-                </td>
+                <th>Avaliação <i class="fas fa-sticky-note"></i> </th>
+                <th>Período <i class="fas fa-paste"></i></th>
+                <th>Questões <i class="fas fa-align-justify"></i></th>
+                <th>Responderam <i class="fas fa-pencil-alt"></i></th>
+                <th></th>
               </tr>
-            {% empty %}
-              <tr>
-                <td class="bg-light text-center font-italic" colspan="5">Você ainda não criou nenhuma Avaliação.</td>
-              </tr>
-            {% endfor %}
-                
-        </tbody>
-    </table>
+          </thead>
+          <tbody>
+              
+
+              {% for quiz in quizzes %}
+                <tr>
+                  <td class="align-middle"><a href="{% url 'classroom:quiz_change' quiz.pk %}">{{ quiz.name }}</a></td>
+                  <td class="align-middle">{{ quiz.subject.get_html_badge }}</td>
+                  <td class="align-middle">{{ quiz.questions_count }}</td>
+                  <td class="align-middle">{{ quiz.taken_count }}</td>
+                  <td class="text-right">
+                    <a href="{% url 'classroom:quiz_results' quiz.pk %}" class="btn btn-primary">Ver resultados <i class="fas fa-eye"></i></a>
+                  </td>
+                </tr>
+              {% empty %}
+                <tr>
+                  <td class="bg-light text-center font-italic" colspan="5">Você ainda não criou nenhuma Avaliação.</td>
+                </tr>
+              {% endfor %}
+                  
+          </tbody>
+      </table>
+    </div>
   </div>
 </div>
-
-
-
-      
-    
-
-
 <br><br><br><br><br>
-
-
-
-
 {% endblock content %}
-
-
-
-
-
-
