--- a/classroom/templates/classroom/teachers/quiz_graphic.html
+++ b/classroom/templates/classroom/teachers/quiz_graphic.html
@@ -1,5 +1,4 @@
 {% extends "global/base_dashboard.html" %}
-
 {% load static %}
 {% load crispy_forms_tags %}
 
@@ -11,9 +10,7 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-
 {% endblock scripts_head %}
-
 {% block content %}
     <section class="section">
         <div class="container">
@@ -134,12 +131,13 @@
                     colorByPoint: true,
                     data: [
                         {% for item in qs %}
-                                {% if quiz.id == item.quiz.id %}
-                                    {
-                                        name: "{{ item.student.user.first_name|safe }} {{ item.student.user.last_name|safe }}" ,
-                                        y: {{ item.score|safe }},
-                                    },
-                                {% endif %}
+                            {% if quiz.id == item.quiz.id %}
+                                {
+                                    name: "{{ item.student.user.first_name }} {{ item.student.user.last_name }}",
+                                    y: {{ item.score }},
+                                    drilldown: "{{ item.student.user.first_name }} {{ item.student.user.last_name }}"
+                                },
+                            {% endif %}
                         {% endfor %}
                     ]
                 }
@@ -157,3 +155,13 @@
         {{ item.student }} - {{ item.score }}
     {% endif %}
 {% endfor %}
+
+
+
+
+{% comment %} {% if quiz.id == item.quiz.id %}
+                                    {
+                                        name: "{{ item.student.user.first_name|safe }} {{ item.student.user.last_name|safe }}" ,
+                                        y: {{ item.score|safe }},
+                                    },
+                                {% endif %} {% endcomment %}
